Alignment Issues CSS fixes

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,4 @@ body {
     color: #D9D9D9;
     padding: 20px;
     height: 100vh;
-    display: flex;
-    justify-content: center;
 }
